<resources>
    <string name="app_name">HealtTrack</string>
    <string name="num">0</string>
    <string name="save">Сохранить</string>

    <string name="input_text_upper_pressure">Верхнее давление</string>
    <string name="input_text_lower_pressure">Нижнее давление</string>
    <string name="input_text_pulse">Пульс</string>

    <string name="error_date_time">20.04.2022 8:00</string>
    <string name="error_input_num">Введите число</string>
</resources>